new files and deleted files

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/ssathyanarayana2024/monument-testsuite#readme",
   "devDependencies": {
-    "cypress": "^15.3.0"
+    "@cypress/xpath": "^2.0.3",
+    "cypress": "^15.3.0",
+    "cypress-xpath": "^2.0.1"
   }
 }
